syntax = "proto3";

option csharp_namespace = "MeterReaderWeb.gRPC";

import "google/protobuf/timestamp.proto";

service MeterReadingService {
	rpc AddReading(ReadingPacket) returns (StatusMessage);
}

message ReadingPacket {
	repeated ReadingMessage Readings = 1;
	ReadingStatus Succesful = 2;
}

message ReadingMessage {
	int32 CustomerId = 1;
	int32 ReadingValue = 2;
	string Notes = 3;
	google.protobuf.Timestamp ReadingTime = 5;
	reserved 4; //Earlier 4 was for the field, Succesful of type ReadingStatus. We have moved it to ReadingPacket so, making 4 reserved.
	reserved 'Succesful'; //Earlier Succesful was for the ReadingStatus field. We have moved it to ReadingPacket so, making Succesful reserved.
}

message StatusMessage {
	ReadingStatus Succes = 1;
	string Message = 2;
}

enum ReadingStatus{
	Unknown = 0;
	Success = 1;
	Failure = 2;
}

